force-app/main/default/objects/ZST_TCP_PROD_OUT__x/ZST_TCP_PROD_OUT__x.object-meta.xml
<CustomObject>
    <description>ZST_TCP_PROD_OUTSet</description>
    <externalDataSource>TCP_STNSAP_Product</externalDataSource>
    <externalName>ZST_TCP_PROD_OUTSet</externalName>
    <label>ZST_TCP_PROD_OUT</label>
    <pluralLabel>ZST_TCP_PROD_OUTSet</pluralLabel>
</CustomObject>