force-app/main/default/objects/ZST_TCP_PROD_OUT__x/fields/CUSTOMER__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMER__c</fullName>
    <description>CUSTOMER</description>
    <externalDeveloperName>CUSTOMER</externalDeveloperName>
    <label>CUSTOMER</label>
    <length>10</length>
    <type>Text</type>
</CustomField>