force-app/main/default/objects/ZST_TCP_PROD_OUT__x/fields/DIST_CHNL__c.field-meta.xml
<CustomField>
    <fullName>DIST_CHNL__c</fullName>
    <description>DIST_CHNL</description>
    <externalDeveloperName>DIST_CHNL</externalDeveloperName>
    <label>DIST_CHNL</label>
    <length>2</length>
    <type>Text</type>
</CustomField>