force-app/main/default/objects/ZST_TCP_PROD_OUT__x/fields/GROSS_WEIGHT__c.field-meta.xml
<CustomField>
    <fullName>GROSS_WEIGHT__c</fullName>
    <description>GROSS_WEIGHT</description>
    <externalDeveloperName>GROSS_WEIGHT</externalDeveloperName>
    <label>GROSS_WEIGHT</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>