force-app/main/default/objects/ZST_TCP_PROD_OUT__x/fields/MATERIAL__c.field-meta.xml
<CustomField>
    <fullName>MATERIAL__c</fullName>
    <description>MATERIAL</description>
    <externalDeveloperName>MATERIAL</externalDeveloperName>
    <label>MATERIAL</label>
    <length>18</length>
    <type>Text</type>
</CustomField>