force-app/main/default/objects/ZST_TCP_PROD_OUT__x/fields/MATERIAL_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>MATERIAL_DESCRIPTION__c</fullName>
    <description>MATERIAL_DESCRIPTION</description>
    <externalDeveloperName>MATERIAL_DESCRIPTION</externalDeveloperName>
    <label>MATERIAL_DESCRIPTION</label>
    <length>40</length>
    <type>Text</type>
</CustomField>