force-app/main/default/objects/ZST_TCP_PROD_OUT__x/fields/NET_WEIGHT__c.field-meta.xml
<CustomField>
    <fullName>NET_WEIGHT__c</fullName>
    <description>NET_WEIGHT</description>
    <externalDeveloperName>NET_WEIGHT</externalDeveloperName>
    <label>NET_WEIGHT</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>