force-app/main/default/objects/ZST_TCP_PROD_OUT__x/fields/UNIT_OF_MEASURE__c.field-meta.xml
<CustomField>
    <fullName>UNIT_OF_MEASURE__c</fullName>
    <description>UNIT_OF_MEASURE</description>
    <externalDeveloperName>UNIT_OF_MEASURE</externalDeveloperName>
    <label>UNIT_OF_MEASURE</label>
    <length>3</length>
    <type>Text</type>
</CustomField>