force-app/main/default/objects/ZST_TCP_PROD_OUT__x/fields/ZTIME__c.field-meta.xml
<CustomField>
    <fullName>ZTIME__c</fullName>
    <description>ZTIME</description>
    <externalDeveloperName>ZTIME</externalDeveloperName>
    <label>ZTIME</label>
    <length>6</length>
    <type>Text</type>
</CustomField>